# mathema

./: Cargo.toml  README.md
mathema/: package-lock.json  package.json
mathema/public/: index.html
mathema/src/: Answers.js  App.js  Card.js  Constants.js  MissingAnswers.js  Question.js  QuestionKind.js  Quiz.js  QuizComplete.js  QuizState.js  ViewCards.js  util.js
src/: add.rs  cards.rs  dump.rs  errors.rs  git.rs  language.rs  line_parser.rs  main.rs  new.rs  prelude.rs  quiz.rs  serve.rs  status.rs  uuid.rs  uuid_ext.rs
src/cards/: mod.rs
src/db/: mod.rs
src/quiz/: mod.rs
src/quiz/presentation/: basic.rs  mod.rs  ncurses.rs  text.rs
src/selection/: mod.rs  test.rs
src/test/: env.rs  mod.rs
