[package]
name = "mathema"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]

[dependencies]
atomicwrites = "0.1"
failure = "0.1.1"
itertools = "0.7.6"
structopt = "0.1.7"
structopt-derive = "0.1.6"
git2 = "0.6.11"
rand = "0.4"
string-interner = "0.6.3"
serde = "1.0.27"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2.0"

[dependencies.uuid]
version = "0.6.0-beta"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[dev-dependencies]
assert_cli = "0.5"
tempdir = "0.3.6"
