[package]
name = "mathema"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]
edition = "2018"

[features]
default = []
console = ["ncurses", "cursive"]

[dependencies]
atomicwrites = "0.1"
cursive =  { version="0.7", optional = true }
failure = "0.1.1"
itertools = "0.7.6"
structopt = "0.1.7"
structopt-derive = "0.1.6"
git2 = "0.8"
lazy_static = "1.0"
log = "0.4.6"
env_logger = "0.6.1"
rand = "0.4"
regex = "0.2"
ncurses = { version="5.0", optional = true }
string-interner = "0.6.3"
serde = "1.0.27"
serde_derive = "1.0"
ron = "0.2"
walkdir = "2.0"
tide = "0.2.0"
http = "0.1"
http-service = "0.2.0"
percent-encoding = "1.0"
rust-embed = { version="4.4.0", features=["debug-embed"] }

[dependencies.uuid]
version = "0.6.0-beta"
features = ["v4", "serde"]

[dependencies.chrono]
version = "0.4.0"
features = ["serde"]

[dev-dependencies]
assert_cli = "0.5"
tempdir = "0.3.6"
